add 4 scripts for data prepare, data split, data quality check and data calendar check

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore all CSV files
 *.csv
 data/*.csv
+*.txt
 
 # Optional: Ignore specific large dataset files explicitly
 merged_mayo_dic_2021.csv
